--- a/HW1LinkedList/Makefile
+++ b/HW1LinkedList/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ main.cpp Book.cpp Library.cpp -Wall -o librarylist
+	g++ main.cpp Book.cpp Library.cpp -Wall -g -o librarylist
 
 tags:
 	unitags -eR *
