Add proper makefile to project

--- a/HW1LinkedList/Makefile
+++ b/HW1LinkedList/Makefile
@@ -1,5 +1,17 @@
-all:
-	g++ main.cpp Book.cpp Library.cpp -Wall -g -o librarylist
+CPPFLAGS=-g -Wall
+
+librarylist: main.o Library.o Book.o
+	g++ $(CPPFLAGS) main.o Library.o Book.o -o librarylist
+
+main.o: Book.h Library.h
+	g++ $(CPPFLAGS) -c main.cpp
+
+Library.o: Library.h
+	g++ $(CPPFLAGS) -c Library.cpp
+
+Book.o: Book.h
+	g++ $(CPPFLAGS) -c Book.cpp
+
 
 tags:
 	unitags -eR *
