Add initial files, makefile

--- a/HW3HashTables/Makefile
+++ b/HW3HashTables/Makefile
@@ -1,15 +1,11 @@
 CXX = g++
 CXXFLAGS = -g -Wall -MMD
-RELEASEFLAGS = -O3 -Wall
-OBJECTS =
+OBJECTS = main.o HashTable.o
 DEPENDS = ${OBJECTS:.o=.d}    # substitutes ".o" with ".d"
 EXEC = hashtable
 
 ${EXEC} : ${OBJECTS}
 	${CXX} ${OBJECTS} -o ${EXEC}
-
-release: ${OBJECTS}
-	g++ ${RELEASEFLAGS} ${OBJECTS} -o release
 
 
 -include ${DEPENDS}
